Improve handling if a file is loaded with an invalid base currency assignment

BUG: 253099

svn path=/trunk/extragear/office/kmymoney/; revision=1206653